# ziplinter

./: Cargo.toml  README.md  default.nix
rc-zip/: Cargo.toml
ziplinter/: Cargo.toml
ziplinter-python/: Cargo.toml  test.py
ziplinter-python/src/: lib.rs
ziplinter/src/: lib.rs  main.rs
ziplinter/src/snapshots/: ziplinter__test__absolute-name.zip.snap  ziplinter__test__binary_comment.zip.snap  ziplinter__test__concatenated.zip.snap  ziplinter__test__cp-437.zip.snap  ziplinter__test__crc32-not-streamed.zip.snap  ziplinter__test__dd.zip.snap  ziplinter__test__found-me-bzip2.zip.snap  ziplinter__test__found-me-deflate64.zip.snap  ziplinter__test__found-me-lzma.zip.snap  ziplinter__test__found-me-zstd.zip.snap  ziplinter__test__go-no-datadesc-sig.zip.snap  ziplinter__test__go-with-datadesc-sig.zip.snap  ziplinter__test__long_file_name.zip.snap  ziplinter__test__long_file_name_comment.zip.snap  ziplinter__test__meta.zip.snap  ziplinter__test__readme.zip.snap  ziplinter__test__relative.zip.snap  ziplinter__test__same-names.zip.snap  ziplinter__test__secret-a.zip.snap  ziplinter__test__secret.zip.snap  ziplinter__test__shift-jis.zip.snap  ziplinter__test__snapshot_zip_files-11.snap  ziplinter__test__snapshot_zip_files-12.snap  ziplinter__test__snapshot_zip_files-13.snap  ziplinter__test__snapshot_zip_files-14.snap  ziplinter__test__snapshot_zip_files-16.snap  ziplinter__test__snapshot_zip_files-18.snap  ziplinter__test__snapshot_zip_files-19.snap  ziplinter__test__snapshot_zip_files-2.snap  ziplinter__test__snapshot_zip_files-21.snap  ziplinter__test__snapshot_zip_files-22.snap  ziplinter__test__snapshot_zip_files-24.snap  ziplinter__test__snapshot_zip_files-25.snap  ziplinter__test__snapshot_zip_files-26.snap  ziplinter__test__snapshot_zip_files-29.snap  ziplinter__test__snapshot_zip_files-3.snap  ziplinter__test__snapshot_zip_files-30.snap  (+32 more)
(+39 files in other folders)
