[package]
name = "ziplinter-python"
version = "0.1.0"
edition = "2024"

[lib]
name = "ziplinter"
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0.137"
pythonize = "0.24.0"
ziplinter = { version = "0.1.0", path = "../ziplinter" }

[dependencies.pyo3]
version = "0.24.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
