[package]
name = "ziplinter"
version = "0.1.0"
edition = "2021"

[dependencies]
rc-zip-sync = { path = "../rc-zip-sync" }
rc-zip = { path = "../rc-zip" }
serde_json = "1.0.137"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.42.1", features = ["json"] }
